nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "gce"
  labels:
    app: nginx
  name: nginx-ingress
spec:
  rules:
    - host: "35.201.95.239.nip.io"
      http:
        paths:
          - backend:
              service:
                name: nginx-service
                port:
                  name: http
            path: /*
            pathType: ImplementationSpecific
